style.css
.Page{
    display: none;   
}




/* NAVBAR */
.LeftNav{
    text-align: center; flex-direction: column; height: 100vh; justify-content: center;
}

.NavItem{
  margin-top: 1em;
  margin-bottom: 1em;
  transition: 0.3s ease;

  font-size: 20px;

}

.NavItem:hover{
  border-top: 4px solid black;
  border-bottom: 4px solid black;
  padding: 6px 0; 
  cursor: pointer;
}

/* MOBILE NAVBAR */
#MobileNav{
  position: fixed;
  display: flex;
}
.NavMobi{
  display: block;
  line-height: 200%;
}

/* HAMBURGER */
#Hamburger{
  position: fixed;
  top: 1em;
  left: 1em;
}

.bar1, .bar2, .bar3 {
  width: 35px;
  height: 5px;
  background-color: #333;
  margin: 6px 0;
  transition: 0.4s;
}

.change .bar1 {
  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
  transform: rotate(-45deg) translate(-9px, 6px);
}

.change .bar2 {opacity: 0;}

.change .bar3 {
  -webkit-transform: rotate(45deg) translate(-8px, -8px);
  transform: rotate(45deg) translate(-8px, -8px);
}

/* NIGHTMODE */

